sfSandBoxCode/force-app/main/default/objects/Sanergy_Calendar__c/Sanergy_Calendar__c.object-meta.xml
<CustomObject>
    <label>Sanergy Calendar</label>
    <nameField>
        <label>Sanergy Calendar Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sanergy Calendar</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>