sfSandBoxCode/force-app/main/default/objects/Sanergy_Calendar__c/fields/is_Weekend_or_Holiday__c.field-meta.xml
<CustomField>
    <fullName>is_Weekend_or_Holiday__c</fullName>
    <formula>IF(( IsHoliday__c  = true ||  IsWeekend__c = true ), 0, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>is Weekend or Holiday</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>