sfSandBoxCode/force-app/main/default/objects/Sanergy_Calendar__c/fields/isBusinessDay__c.field-meta.xml
<CustomField>
    <fullName>isBusinessDay__c</fullName>
    <description>Working Days Excluding Holidays and Weekends</description>
    <formula>IF(( IsHoliday__c = TRUE|| IsWeekend__c = TRUE), FALSE, TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Working Days Excluding Holidays and Weekends</inlineHelpText>
    <label>isBusinessDay</label>
    <type>Checkbox</type>
</CustomField>