sfSandBoxCode/force-app/main/default/objects/Sanergy_Calendar__c/fields/isBusinessDayInclSat__c.field-meta.xml
<CustomField>
    <fullName>isBusinessDayInclSat__c</fullName>
    <description>Working Days including Saturday as a working day</description>
    <formula>IF(( IsHoliday__c = TRUE ||  Weekday_Name__c = &#39;Sunday&#39;), FALSE, TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Working Days including Saturday as a working day</inlineHelpText>
    <label>isBusinessDayInclSat</label>
    <type>Checkbox</type>
</CustomField>