sfSandBoxCode/force-app/main/default/objects/Sanergy_Calendar__c/fields/IsHoliday__c.field-meta.xml
<CustomField>
    <fullName>IsHoliday__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Changes to 1 if the date is a holiday,otherwise 0</description>
    <inlineHelpText>Changes to 1 if the date is a holiday,otherwise 0</inlineHelpText>
    <label>IsHoliday ?</label>
    <type>Checkbox</type>
</CustomField>