sfSandBoxCode/force-app/main/default/objects/Sanergy_Calendar__c/fields/IsWeekend__c.field-meta.xml
<CustomField>
    <fullName>IsWeekend__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Changes to 1 if the date is a weekend,otherwise 0</description>
    <inlineHelpText>Changes to 1 if the date is a weekend,otherwise 0</inlineHelpText>
    <label>IsWeekend ?</label>
    <type>Checkbox</type>
</CustomField>