sfSandBoxCode/force-app/main/default/objects/Sanergy_Calendar__c/fields/Weekday_Name__c.field-meta.xml
<CustomField>
    <fullName>Weekday_Name__c</fullName>
    <formula>IF( Weekday_No__c = 1, &quot;Sunday&quot;,
IF( Weekday_No__c = 2, &quot;Monday&quot;,
IF( Weekday_No__c = 3, &quot;Tuesday&quot;,
IF( Weekday_No__c = 4, &quot;Wednesday&quot;,
IF( Weekday_No__c = 5, &quot;Thursday&quot;,
IF( Weekday_No__c = 6, &quot;Friday&quot;,
IF( Weekday_No__c = 7, &quot;Saturday&quot;, &quot;NULL&quot;)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weekday Name</label>
    <type>Text</type>
</CustomField>