sfSandBoxCode/force-app/main/default/objects/Sanergy_Calendar__c/fields/Weekday_No__c.field-meta.xml
<CustomField>
    <fullName>Weekday_No__c</fullName>
    <formula>IF(  NOT( ISNULL(WEEKDAY( Date__c )))  , WEEKDAY( Date__c ), WEEKDAY( Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weekday No.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>