sfSandBoxCode/force-app/main/default/objects/Sanergy_Calendar__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Description__c</columns>
    <columns>IsHoliday__c</columns>
    <columns>IsWeekend__c</columns>
    <columns>Weekday_Name__c</columns>
    <columns>Weekday_No__c</columns>
    <columns>is_Weekend_or_Holiday__c</columns>
    <columns>isBusinessDay__c</columns>
    <columns>isBusinessDayInclSat__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>